--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -14,6 +14,6 @@
     background-color: rgba(0, 255, 0, 0.5);
 }
 
-.three {
+.three { /*better name would have been "adjust font size" or "font size 24"*/
     font-size: 24px;
 }
