--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
 
 .icon {
@@ -33,6 +34,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin: 20px;
 }
 
 .close-button {
@@ -66,4 +69,23 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header-and-close {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-body {
+  margin: 20px 20px 20px 0px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: large;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
