--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -33,7 +33,7 @@ input {
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 0 10px 0 10px;
+  padding: 16px;
   align-items: center;
 }
 
@@ -42,6 +42,7 @@ input {
   display: flex;
   list-style-type: none;
   padding: 0;
+  margin: 0;
   gap: 15px;
 }
 
